--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,10 @@
+.home {
+  max-width: 760px;
+  margin: 40px auto;
+  letter-spacing: 1px;
+  line-height: 1.6em;
+}
+
 .container {
   padding: 0 2rem;
 }
